✨feat(auth): Implement user request and response DTOs for registration, login, and updates
Author: Zheyun Zhao <jp2022213670@qmul.ac.uk>